# crrc

./: .gitignore  CMakeLists.txt  README.md
src/: AdminApplication.cpp  AdminApplication.h  Agreements.cpp  Agreements.h  AttachmentController.h  AuthStoreSql.cpp  AuthStoreSql.h  CMakeLists.txt  Contacts.cpp  Contacts.h  Degrees.cpp  Degrees.h  Departments.cpp  Departments.h  Designations.cpp  Designations.h  InstitutionAgreements.cpp  InstitutionAgreements.h  InstitutionDepartments.cpp  InstitutionDepartments.h  InstitutionDesignations.cpp  InstitutionDesignations.h  InstitutionTypes.cpp  InstitutionTypes.h  Institutions.cpp  Institutions.h  Login.cpp  Login.h  Logos.cpp  Logos.h  Logout.cpp  Logout.h  Programs.cpp  Programs.h  Root.cpp  Root.h  constants.h
src/dao/: AgreementDAO.cpp  AgreementDAO.h  ContactDAO.cpp  ContactDAO.h  CourseDAO.cpp  CourseDAO.h  DegreeDAO.cpp  DegreeDAO.h  DepartmentDAO.cpp  DepartmentDAO.h  DesignationDAO.cpp  DesignationDAO.h  InstitutionAgreementDAO.cpp  InstitutionAgreementDAO.h  InstitutionDAO.cpp  InstitutionDAO.h  InstitutionDesignationDAO.cpp  InstitutionDesignationDAO.h  InstitutionTypeDAO.cpp  InstitutionTypeDAO.h  LogoDAO.cpp  LogoDAO.h  ProgramDAO.cpp  ProgramDAO.h  RoleDAO.cpp  RoleDAO.h  UserDAO.cpp  UserDAO.h  functions.h
src/model/: Agreement.cpp  Agreement.h  BlobItem.cpp  BlobItem.h  Contact.cpp  Contact.h  Degree.cpp  Degree.h  Department.cpp  Department.h  Designation.cpp  Designation.h  Institution.cpp  Institution.h  InstitutionAgreement.cpp  InstitutionAgreement.h  InstitutionDesignation.cpp  InstitutionDesignation.h  InstitutionType.cpp  InstitutionType.h  Logo.h  Program.cpp  Program.h  Role.cpp  Role.h  User.cpp  User.h
tests/unit/: AutoTest.h  CMakeLists.txt
tests/unit/controller/: BaseTest.cpp  BaseTest.h  ContactTest.cpp  ContactTest.h  DegreeTest.cpp  (+3 more)
(+65 files in other folders)
